--- a/examples/tcharall/tcharall_2005.vcproj
+++ b/examples/tcharall/tcharall_2005.vcproj
@@ -43,6 +43,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
+				AdditionalIncludeDirectories="..\..\src\"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -119,6 +120,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
+				AdditionalIncludeDirectories="..\..\src\"
 				PreprocessorDefinitions="WIN32;_WIN64;_DEBUG;_CONSOLE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -194,6 +196,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				AdditionalIncludeDirectories="..\..\src\"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
 				RuntimeLibrary="0"
 				UsePrecompiledHeader="0"
@@ -270,6 +273,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				AdditionalIncludeDirectories="..\..\src\"
 				PreprocessorDefinitions="WIN32;_WIN64;NDEBUG;_CONSOLE"
 				RuntimeLibrary="2"
 				UsePrecompiledHeader="0"
@@ -340,15 +344,15 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
-				RelativePath=".\auto_tchar.h"
+				RelativePath="..\..\src\auto_tchar.h"
 				>
 			</File>
 			<File
-				RelativePath=".\auto_tmain.h"
+				RelativePath="..\..\src\auto_tmain.h"
 				>
 			</File>
 			<File
-				RelativePath=".\prichar.h"
+				RelativePath="..\..\src\prichar.h"
 				>
 			</File>
 		</Filter>
